// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders filter by polygon button 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="spatialFilterToolbar__shape"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="draw_filter_polygon"
        color="text"
        iconType={Object {}}
        isDisabled={false}
        onClick={[Function]}
        size="s"
        title="Draw Polygon"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="drawPolygonPopOver"
  display="inlineBlock"
  hasArrow={true}
  id="drawPolygonId"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "content": <FilterInputPanel
            defaultFilterLabel="polygon"
            drawLabel="Draw Polygon"
            mode="polygon"
            onSubmit={[Function]}
            relations={
              Array [
                "intersects",
                "disjoint",
                "within",
              ]
            }
          />,
          "id": 0,
          "title": "DRAW SHAPE",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;

exports[`renders filter by polygon in middle of drawing 1`] = `
<EuiPopover
  anchorPosition="leftUp"
  button={
    <EuiPanel
      className="spatialFilterToolbar__shape"
      paddingSize="none"
    >
      <EuiButtonIcon
        aria-label="draw_filter_polygon"
        color="text"
        iconType={Object {}}
        isDisabled={true}
        onClick={[Function]}
        size="s"
        title="Draw Polygon"
      />
    </EuiPanel>
  }
  closePopover={[Function]}
  data-test-subj="drawPolygonPopOver"
  display="inlineBlock"
  hasArrow={true}
  id="drawPolygonId"
  isOpen={false}
  ownFocus={true}
  panelPaddingSize="none"
>
  <EuiContextMenu
    initialPanelId={0}
    panels={
      Array [
        Object {
          "content": <FilterInputPanel
            defaultFilterLabel="polygon"
            drawLabel="Draw Polygon"
            mode="polygon"
            onSubmit={[Function]}
            relations={
              Array [
                "intersects",
                "disjoint",
                "within",
              ]
            }
          />,
          "id": 0,
          "title": "DRAW SHAPE",
        },
      ]
    }
    size="m"
  />
</EuiPopover>
`;
